# webhooks

./: Cargo.toml
examples/: hooks.json
src/: cli.rs  main.rs
src/utils/: algorithms.rs  cli.rs  config.rs  mod.rs  server.rs
