[package]
authors = ["Victor Gorchilov <victor@gorchilov.com>"]
categories = ["web-programming::http-client", "filesystem"]
description = "Webhook server"
edition = "2018"
keywords = ["webhooks"]
license = "MIT"
name = "webhooks"
readme = "README.md"
repository = "https://github.com/ManiacMaxo/webhooks/"
version = "0.1.0"

[dependencies]
clap = "2.33"
httparse = "1.4"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
