[package]
authors = ["Victor Gorchilov <victor@gorchilov.com>"]
categories = ["web-programming::http-client", "filesystem"]
description = "Webhook server"
edition = "2018"
keywords = ["webhooks", "http"]
license = "MIT"
name = "webhooks"
readme = "README.md"
repository = "https://github.com/ManiacMaxo/webhooks/"
version = "0.1.0"

[dependencies]
clap = "2.33"
hmac = "0.11"
hyper = {version = "0.14", features = ["server", "runtime", "http2"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
sha2 = "0.9"
tokio = {version = "1", features = ["macros", "rt-multi-thread", "signal"]}
